Changed Icons and fixed few alignments

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
 }
 
 .nav, .intro-text {
-  background-image: url("../Images/nav-bg.jpg");
+  background-image: url("../Images/nav-bg.png");
 }
 
 .nav-ham-icon {
@@ -32,12 +32,14 @@
 
 .bar1.pressed{
   transform: translate(0, 11px) rotate(-45deg);
+  background-color: white;
 }
 
 .bar2.pressed {opacity: 0;}
 
 .bar3.pressed {
   transform: translate(0, -11px) rotate(45deg);
+  background-color: white;
 }
 
 .intro-text > h3,h1 {
@@ -180,6 +182,10 @@
   background-image: none;
 }
 
+.nav.pressed, .nav-social.active, .nav-bar.active {
+  background-color: #3E3E3E;
+}
+
 .nav-ham-icon.pressed {
   height: 30px;
   background-image: none;
@@ -238,6 +244,7 @@
   align-items: center;
   padding-bottom: 20px;
   padding-top: 20px;
+  background-color: #d3d3d3;
 }
 
 #footer-logo {
@@ -480,7 +487,7 @@
     justify-content: center;
     align-items: center;
     height: 70px;
-    background-color: #2E2E2E;
+    background-color: #d3d3d3;
     padding-bottom: 20px;
     padding-top: 20px;
   }
@@ -492,7 +499,7 @@
 
   .footer > div {
     margin-right: 30%;
-    color: white;
+    color: black;
   }
   
   #footer-logo {
@@ -535,5 +542,9 @@
 
   #footer-logo {
     width: 50px;
+  }
+
+  .main-program {
+    padding-bottom: 50px;
   }
 }
